--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -92,29 +92,24 @@
     <ClCompile Include="3d\Object3d.cpp" />
     <ClCompile Include="3d\ParticleManager.cpp" />
     <ClCompile Include="audio\Audio.cpp" />
-    <ClCompile Include="BackGround.cpp" />
-    <ClCompile Include="BaseScene.cpp" />
+    <ClCompile Include="scene\BaseScene.cpp" />
     <ClCompile Include="camera\Camera.cpp" />
     <ClCompile Include="camera\DebugCamera.cpp" />
     <ClCompile Include="2d\Text.cpp" />
     <ClCompile Include="base\DirectXCommon.cpp" />
-    <ClCompile Include="Dog.cpp" />
     <ClCompile Include="dynamics\Collision.cpp" />
     <ClCompile Include="dynamics\CollisionPrimitive.cpp" />
-    <ClCompile Include="EndScene.cpp" />
-    <ClCompile Include="FlameRate.cpp" />
-    <ClCompile Include="ObjManager.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="River.cpp" />
+    <ClCompile Include="scene\EndScene.cpp" />
+    <ClCompile Include="base\FlameRate.cpp" />
+    <ClCompile Include="3d\ObjManager.cpp" />
     <ClCompile Include="scene\GameScene.cpp" />
     <ClCompile Include="input\Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="base\WinApp.cpp" />
-    <ClCompile Include="SelectScene.cpp" />
-    <ClCompile Include="Thieves.cpp" />
-    <ClCompile Include="TitleScene.cpp" />
-    <ClCompile Include="Vector2.cpp" />
-    <ClCompile Include="Vector3.cpp" />
+    <ClCompile Include="scene\SelectScene.cpp" />
+    <ClCompile Include="scene\TitleScene.cpp" />
+    <ClCompile Include="base\Vector2.cpp" />
+    <ClCompile Include="base\Vector3.cpp" />
     <ClCompile Include="xinput\XinputControll.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -198,30 +193,25 @@
     <ClInclude Include="3d\Object3d.h" />
     <ClInclude Include="3d\ParticleManager.h" />
     <ClInclude Include="audio\Audio.h" />
-    <ClInclude Include="BackGround.h" />
-    <ClInclude Include="BaseScene.h" />
+    <ClInclude Include="scene\BaseScene.h" />
     <ClInclude Include="camera\Camera.h" />
     <ClInclude Include="camera\DebugCamera.h" />
     <ClInclude Include="2d\Text.h" />
     <ClInclude Include="base\DirectXCommon.h" />
     <ClInclude Include="Define.h" />
-    <ClInclude Include="Dog.h" />
     <ClInclude Include="dynamics\Collision.h" />
     <ClInclude Include="dynamics\CollisionPrimitive.h" />
-    <ClInclude Include="EndScene.h" />
-    <ClInclude Include="FlameRate.h" />
-    <ClInclude Include="ObjManager.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="River.h" />
+    <ClInclude Include="scene\EndScene.h" />
+    <ClInclude Include="base\FlameRate.h" />
+    <ClInclude Include="3d\ObjManager.h" />
     <ClInclude Include="scene\GameScene.h" />
     <ClInclude Include="input\Input.h" />
     <ClInclude Include="SafeDelete.h" />
     <ClInclude Include="base\WinApp.h" />
-    <ClInclude Include="SelectScene.h" />
-    <ClInclude Include="Thieves.h" />
-    <ClInclude Include="TitleScene.h" />
-    <ClInclude Include="Vector2.h" />
-    <ClInclude Include="Vector3.h" />
+    <ClInclude Include="scene\SelectScene.h" />
+    <ClInclude Include="scene\TitleScene.h" />
+    <ClInclude Include="base\Vector2.h" />
+    <ClInclude Include="base\Vector3.h" />
     <ClInclude Include="xinput\XinputControll.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
