--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -50,7 +50,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir);$(ProjectDir)3d\;$(ProjectDir)2d\;$(ProjectDir)camera\;$(ProjectDir)base\;$(ProjectDir)input\;$(ProjectDir)audio\;$(ProjectDir)scene\;$(ProjectDir)dynamics\;$(ProjectDir)xinput\;$(ProjectDir)player\;$(ProjectDir)shader\;$(ProjectDir)target\;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir);$(ProjectDir)3d\;$(ProjectDir)2d\;$(ProjectDir)camera\;$(ProjectDir)base\;$(ProjectDir)input\;$(ProjectDir)audio\;$(ProjectDir)scene\;$(ProjectDir)dynamics\;$(ProjectDir)xinput\;$(ProjectDir)player\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -92,10 +92,7 @@
     <ClCompile Include="3d\Object3d.cpp" />
     <ClCompile Include="3d\ParticleManager.cpp" />
     <ClCompile Include="audio\Audio.cpp" />
-<<<<<<< HEAD
     <ClCompile Include="target\BaseTarget.cpp" />
-=======
->>>>>>> d8c4d125e4b3ceee29552aedfe4c9a6164a53828
     <ClCompile Include="camera\FreeCamera.cpp" />
     <ClCompile Include="scene\BaseScene.cpp" />
     <ClCompile Include="camera\Camera.cpp" />
@@ -115,8 +112,6 @@
     <ClCompile Include="scene\TitleScene.cpp" />
     <ClCompile Include="base\Vector2.cpp" />
     <ClCompile Include="base\Vector3.cpp" />
-    <ClCompile Include="target\BaseTarget.cpp" />
-    <ClCompile Include="ui\Ui.cpp" />
     <ClCompile Include="xinput\XinputControll.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -200,10 +195,7 @@
     <ClInclude Include="3d\Object3d.h" />
     <ClInclude Include="3d\ParticleManager.h" />
     <ClInclude Include="audio\Audio.h" />
-<<<<<<< HEAD
     <ClInclude Include="target\BaseTarget.h" />
-=======
->>>>>>> d8c4d125e4b3ceee29552aedfe4c9a6164a53828
     <ClInclude Include="base\SafeDelete.h" />
     <ClInclude Include="camera\FreeCamera.h" />
     <ClInclude Include="scene\BaseScene.h" />
@@ -224,8 +216,6 @@
     <ClInclude Include="scene\TitleScene.h" />
     <ClInclude Include="base\Vector2.h" />
     <ClInclude Include="base\Vector3.h" />
-    <ClInclude Include="target\BaseTarget.h" />
-    <ClInclude Include="ui\Ui.h" />
     <ClInclude Include="xinput\XinputControll.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
