--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -110,6 +110,7 @@
     </ClCompile>
     <ClCompile Include="scene\TestScene.cpp">
     <ClCompile Include="ui\Score.cpp">
+    <ClCompile Include="player\Player.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -150,6 +151,7 @@
     </ClInclude>
     <ClInclude Include="scene\TestScene.h">
     <ClInclude Include="ui\Score.h">
+    <ClInclude Include="player\Player.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
