waveとして改良

--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -43,6 +43,8 @@
     <ClCompile Include="ui\Score.cpp" />
     <ClCompile Include="ui\Ui.cpp" />
     <ClCompile Include="xinput\XinputControll.cpp" />
+    <ClCompile Include="wave\BaseWave.cpp" />
+    <ClCompile Include="wave\TestWave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\Sprite.h" />
@@ -80,6 +82,8 @@
     <ClInclude Include="ui\Score.h" />
     <ClInclude Include="ui\Ui.h" />
     <ClInclude Include="xinput\XinputControll.h" />
+    <ClInclude Include="wave\BaseWave.h" />
+    <ClInclude Include="wave\TestWave.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\OBJShaderHeader.hlsli" />
