--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -43,6 +43,7 @@
     <ClCompile Include="ui\Score.cpp" />
     <ClCompile Include="ui\Ui.cpp" />
     <ClCompile Include="xinput\XinputControll.cpp" />
+    <ClCompile Include="ui\Stopwatch.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\Sprite.h" />
@@ -80,6 +81,7 @@
     <ClInclude Include="ui\Score.h" />
     <ClInclude Include="ui\Ui.h" />
     <ClInclude Include="xinput\XinputControll.h" />
+    <ClInclude Include="ui\Stopwatch.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\OBJShaderHeader.hlsli" />
