てすとウェーブ修正、感度調整を細かく

--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -118,6 +118,7 @@
     <ClCompile Include="ui\Score.cpp" />
     <ClCompile Include="ui\Ui.cpp" />
     <ClCompile Include="wave\BaseWave.cpp" />
+    <ClCompile Include="wave\FlickWave.cpp" />
     <ClCompile Include="wave\TestWave.cpp" />
     <ClCompile Include="xinput\XinputControll.cpp" />
   </ItemGroup>
@@ -229,6 +230,7 @@
     <ClInclude Include="ui\Stopwatch.h" />
     <ClInclude Include="ui\Ui.h" />
     <ClInclude Include="wave\BaseWave.h" />
+    <ClInclude Include="wave\FlickWave.h" />
     <ClInclude Include="wave\TestWave.h" />
     <ClInclude Include="xinput\XinputControll.h" />
   </ItemGroup>
