--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -46,6 +46,7 @@
     <ClCompile Include="ui\Stopwatch.cpp" />
     <ClCompile Include="wave\BaseWave.cpp" />
     <ClCompile Include="wave\TestWave.cpp" />
+    <ClCompile Include="wave\FlickWave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\Sprite.h" />
@@ -86,6 +87,7 @@
     <ClInclude Include="ui\Stopwatch.h" />
     <ClInclude Include="wave\BaseWave.h" />
     <ClInclude Include="wave\TestWave.h" />
+    <ClInclude Include="wave\FlickWave.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\OBJShaderHeader.hlsli" />
